chore: apply strict rector rules on appstore
